public/style/app.css
@media (min-width: 300px) {
	.full_w {
		width: 100%;
	}
	.half_w {
		width: 100%;
	}
	.three_w {
		width: 100%;
	}
}

@media (min-width: 400px) {
	.full_w {
		width: 100%;
	}
	.half_w {
		width: 100%;
	}
	.three_w {
		width: 100%;
	}
}

@media (min-width: 550px) {
	.full_w {
		width: 100%;
	}
	.half_w {
		width: 100%;
	}
	.three_w {
		width: 100%;
	}
}

@media (min-width: 750px) {
	.full_w {
		width: 100%;
	}
	.half_w {
		width: 50%;
	}
	.three_w {
		width: 33.333%;
	}
}

@media (min-width: 1000px) {
	.full_w {
		width: 100%;
	}
	.half_w {
		width: 50%;
	}
	.three_w {
		width: 33.3333%;
	}
}

@media (min-width: 1200px) {
	.full_w {
		width: 100%;
	}
	.half_w {
		width: 50%;
	}
	.three_w {
		width: 33.333%;
	}
}


/*personalization*/

.app_logo {
	width: 150px;
	height: 150px;
	box-sizing: border-box;
}

.center_div {
	position: absolute;
	margin: auto;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}


/* app header */

.app_header {
	width: 100%;
	height: 50px;
	padding: 5px;
	position: fixed;
	box-sizing: border-box;
	top: 0;
	left: 0;
	right: 0;
	z-index: 5000;
}

.app_icon {
	width: 40px;
	height: 40px;
	display: block;
	line-height: 40px;
	text-align: center;
	font-size: 18px;
	cursor: pointer;
	border-radius: 2px;
	color: rgba(136, 158, 233, 0.6);
	background-color: #262D47;
}

.app_icon:hover {
	color: rgba(136, 158, 233, 1);
}

.menu_icon {
	width: 40px;
	height: 40px;
	line-height: 40px;
	text-align: center;
	font-size: 18px !important;
	color: #2196f3;
}

.menu {
	position: static;
	left: 0;
	top: 0;
	margin: 4px;
}


/* menu-item */

.app_menu {
	width: 160px;
	height: auto;
	position: fixed;
	top: 55px;
	left: 5px;
	border-radius: 2px;
	padding: 4px;
	background-color: white;
	display: none;
	z-index: 5000;
	-webkit-box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.75);
	box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.75);
}

.menu_item {
	width: 100%;
	height: 32px;
	float: left;
	line-height: 32px;
	text-align: center;
	background-color: white;
	cursor: pointer;
	border-radius: 2px;
}

.menu_item:hover {
	background-color: rgba(138, 205, 234, 0.2);
}

.app_page_content {
	min-width: 300px;
	max-width: 1000px;
	width: 95%;
	position: absolute;
	top: 55px;
	left: 0;
	right: 0;
	margin: 0 auto 55px auto;
	background-color: transparent;
	border-radius: 2px;
	padding: 5px;
	box-sizing: border-box;
}

.app_page_header {
	width: 100%;
	height: 50px;
	float: left;
	display: flex;
}

.app_page_icon {
	width: 50px;
	height: 50px;
	line-height: 40px;
	font-size: 22px;
	text-align: center;
	padding: 5px;
	box-sizing: border-box;
}

.app_page_title {
	width: 100%;
	height: 50px;
	line-height: 55px;
	font-size: 16px;
	box-sizing: border-box;
}

.app_page_wrapper {
	width: 100%;
	height: auto;
	float: left;
	overflow: auto;
}


/*app social bar */

.app_social_bar {
	width: 300px;
	height: 50px;
	position: fixed;
	bottom: 50px;
	left: 0;
	right: 0;
	margin: 0 auto 0 auto;
	background-color: transparent;
}

.app_social_icons {
	width: 32px;
	height: 32px;
	margin: 9px;
	float: left;
	line-height: 32px;
	font-size: 28px;
	text-align: center;
	color: rgba(255, 255, 255, 0.5);
}

.app_social_icons:hover {
	color: rgba(255, 255, 255, 1);
}

.behance,
.codepen,
.devianart {
	width: 32px;
	height: 32px;
	display: block;
	opacity: 0.5;
}

.behance:hover,
.codepen:hover,
.devianart:hover {
	opacity: 1;
}

.behance {
	background: url('/assets/behence.svg');
}

.codepen {
	background: url('/assets/codepen.svg');
}

.devianart {
	background: url('/assets/devianart.svg');
}

.app_about {
	min-width: 280px;
	max-width: 480px;
	width: 98%;
	min-height: 500px;
	position: fixed;
	margin: 0 auto 0 auto;
	left: 0;
	right: 0;
	background-color: white;
	padding: 5px;
	box-sizing: border-box;
	border-radius: 2px;
	z-index: 5000;
}

.app_about_u{
	width: 150px !important;
	height: 150px !important;
	border-radius: 5px;
}

.middle_div {
	position: absolute;
	left: 0;
	right: 0;
	margin: 0 auto 0 auto;
	float: left;
}

.app_about_img {
	width: 100%;
	height: 150px;
	float: left;
}

.app_name_txt {
	width: 100%;
	height: auto;
	float: left;
	font-size: 24px;
	text-align: center;
}

.app_about_txt {
	width: 100%;
	height: auto;
	float: left;
	line-height: 32px;
	text-align: center;
	padding-top: 10px;
}

.app_bottom_block {
	position: absolute;
	width: 100%;
	height: auto;
	bottom: 0;
	text-align: center;
	line-height: 50px;
	font-size: 16px;
}


/* dev and design css */

.app_card {
	height: auto;
	float: left;
	margin-bottom: 20px;
	border-radius: 2px;
	background-color: white;
}

.app_card_header {
	width: 100%;
	height: 50px;
	float: left;
	padding: 5px;
	box-sizing: border-box;
	display: flex;
}

.app_card_text {
	width: 100%;
	height: 40px;
	float: left;
	line-height: 40px;
	text-indent: 10px;
	font-size: 16px;
}

.app_card_time {
	width: 100px;
	height: 45px;
	float: right;
	line-height: 40px;
	box-sizing: border-box;
	flex: none;
}

.app_card_content {
	width: 100%;
	height: auto;
	padding: 5px;
	box-sizing: border-box;
	float: left;
}

.app_card_footer {
	width: 100%;
	height: 50px;
	float: left;
	line-height: 50px;
	padding: 5px;
	box-sizing: border-box;
}

.app_card_cover {
	height: auto;
	float: left;
	padding: 0 5px 0 5px;
	box-sizing: border-box;
}

.app_image_bg{
	width: 100%;
	height: auto;
	float: left;
	border-radius: 2px;
	background-color: #304D6D;
}

.index_nav{
	width: 300px;
	height: 80px;
	position: fixed;
	left: 0;
	right: 0;
	bottom: 120px;
	margin: 0 auto 0 auto;
}

.nav_btn_outline{
	width: 50%;
	height: 40px;
	padding: 2px;
	box-sizing: border-box;
	float: left;
}

.nav_btn{
	width: 100%;
	height: 36px;
	float: left;
	line-height: 36px;
	text-align: center;
	cursor: pointer;
	border-radius: 2px;
	color: rgba(255, 255, 255, 0.5) !important;
	background-color: rgba(255,255,255,0);
}

.nav_btn:hover{
	color: rgba(255, 255, 255, 1) !important;
	background-color: rgba(255,255,255,0.1);
}

#app_rights{
	width: 300px;
	text-align: center;
	height: 20px;
	line-height: 20px;
	position: fixed;
	left: 0;
	right:0;
	bottom: 0;
	margin: 0 auto 0 auto;
	color: rgba(255,255,255,0.2);

}

